Info added to contact
Contact needs styling

--- a/foundation-5.5.2/css/main.css
+++ b/foundation-5.5.2/css/main.css
@@ -91,6 +91,15 @@ wrapper {
   margin-right: auto }
 }
 
+.contact{
+  font-size: 1.5em;
+  background-color: ;
+  color: ;
+  font-family: de-walpergens-pica;
+  text-align: center;
+  font-style: italic;
+
+}
 
 
 /*Media Queries*/
