--- a/foundation-5.5.2/css/main.css
+++ b/foundation-5.5.2/css/main.css
@@ -1,3 +1,15 @@
+nav.top-bar {
+    height: 40px;
+    transition: height .33s ease;
+}
+.top-bar.expanded {
+    height: 272px;
+    transition: height .33s ease;
+} 
+
+
+
+
 
 .podcast {
     padding-top: 70px;
